Allow users to configure their machines
